<resources>
    <string name="app_name">Super Trivia</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">E-mail</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="login_error">Email or Password isn\'t correct.</string>
    <string name="registry_empty">Complete the empty fields.</string>
    <string name="registry_password_match">Passwords don\'t match!</string>
    <string name="registry_success_title">Registration Status:</string>
    <string name="registry_success_msg">Successfully Registered User.</string>
    <string name="difficulty_game">Choose a difficulty level</string>
    <string name="difficulty_game_easy">Easy</string>
    <string name="difficulty_game_medium">Medium</string>
    <string name="difficulty_game_hard">Hard</string>
    <string name="category_game">Choose a category:</string>
    <string name="bt_nav_home">Home</string>
    <string name="bt_nav_play_game">To Play</string>
    <string name="bt_nav_ranking">Ranking</string>
    <string name="game_running">Game running…</string>
    <string name="error_category">ERROR - Choose a category.</string>
    <string name="game_next">Next</string>
    <string name="game_finish">End game!</string>
    <string name="game_correct">Corrected</string>
    <string name="game_incorrect">Incorrected</string>
    <string name="game_select_alternative">Select correct alternative:</string>
    <string name="ranking_score">Score</string>
    <string name="ranking_name">Name</string>
    <string name="start_game">Start Game in Home Page !</string>
    <string name="report">Report</string>
    <string name="started">Started At: </string>
    <string name="finished">Finished At: </string>
    <string name="endScore">Score: </string>
    <string name="logout_trivia">Logout</string>
    <string name="logout_trivia_info">
        You are about to log out of your Super Trivia App account, are you sure you want to do this?
        If you don \'t want to do that, just go to Home.
        If you ever wish to vote, use your registered email and password to continue with your progress.
    </string>
    <string name="logout_trivia_confirm">Logout Now</string>
    <string name="login_not_connected">Connect to the Internet</string>
    <string name="login_connected_internet">Connected to the internet</string>


    <string name="msg_sign_up">To play the super trivia, you must register. Sign up and good game!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>